fix* Calendar popperContainer remounting fix* Increase CheckableSelectField z-index to appear over Modal

--- a/packages/ui/src/Select/CheckableSelectField.module.scss
+++ b/packages/ui/src/Select/CheckableSelectField.module.scss
@@ -2,7 +2,7 @@
 @use '../../styles/helpers' as h;
 
 .panel {
-  z-index: c.$zIndex200;
+  z-index: c.$zIndex2000;
 }
 
 .opener {
